e17 (0.19.1-0.1) UNRELEASED; urgency=medium

  * Non-maintainer upload.
  * Update URL in watch file.
  * New upstream version.
    + Bump version of efl (build-)deps to 1.11, drop libedbus-dev (build-)dep.
    + Add (build-)dependencies on libelementary-dev and libemotion-dev.

 -- Andreas Metzler <ametzler@debian.org>  Sat, 13 Dec 2014 15:31:26 +0100

e17 (0.17.6-1) unstable; urgency=medium

  * New upstream version
  * debian/control: update Build-Depends to use EFL 1.7.10
  * debian/control: eeze only exists on Linux architectures (Closes: #748058)
  * debian/patches: drop e_sys_env_cleanup+kfreebsd_no_ptrace, applied upstream

 -- Albin Tonnerre <lutin@debian.org>  Sun, 01 Jun 2014 20:28:41 +0200

e17 (0.17.3-4) unstable; urgency=medium

  * debian/control: refactor the list of deps/builddeps to make it more readable
  * debian/control: add Build-Depends on libeeze-dev, now provided by EFL 1.8

 -- Albin Tonnerre <lutin@debian.org>  Sun, 04 May 2014 20:20:13 +0200

e17 (0.17.3-3) unstable; urgency=medium

  * debian: switch to a .manpages file to install manpages instead of using CDBS
  * debian: switch from CDBS to dh
  * debian: use dh-autoreconf to get recent autotools version (Closes: #738272)
  * debian/rules: make sure we build using the hardening flags
  * patches/00_e_sys_env_cleanup: backport security fixes (Closes: #737705)

 -- Albin Tonnerre <lutin@debian.org>  Sun, 09 Feb 2014 16:35:48 +0100

e17 (0.17.3-2) unstable; urgency=low

  * patches/02_kfreebsd_no_ptrace: fix FTBFS on KFreeBSD (Closes: #712931)
  * patches/03_test_pt_getsiginfo: test for PT_GETSIGINFO, fixes FTBFS on Hurd
  * debian/rules: avoid timestamps in gzipped documentation (Closes: #724340)

 -- Albin Tonnerre <lutin@debian.org>  Sat, 02 Nov 2013 14:41:07 +0100

e17 (0.17.3-1) unstable; urgency=low

  * New upstream release
  * debian/control: update Build-Depends to use EFL 1.7.7
  * debian/control: update URI in the VCS-* fields